# sokoenginepy

./: .bumpversion.cfg  .clang-format  .gitignore  .pylintrc  .readthedocs.yml  .style.yapf  .travis.yml  CHANGELOG.md  CHANGELOG.rst  CMakeLists.txt  CMakePresets.json  INSTALL.md  INSTALL.rst  MANIFEST.in  README.libsokoengine.md  README.md  README.rst  TODO.md  TODO.rst  animate.ipynb  debug.ipynb  draw.ipynb  foo.py  profile.ipynb  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  setup_ext.py  setup_ext_pybind.py  tox.ini  vcpkg.json
lib/libsokoengine/: CMakeLists.txt  INSTALL.md  README.md
lib/libsokoengine/benchmarks/: CMakeLists.txt
lib/libsokoengine/cmake/: configure.cmake
lib/libsokoengine/docs/: .gitignore  Doxyfile.in
lib/libsokoengine/ext/: CMakeLists.txt  export_atomic_move.cpp  export_board_cell.cpp  export_board_graph.cpp  export_board_state.cpp  export_boards.cpp  export_direction.cpp  export_mover.cpp  export_tessellations.cpp  pybind11_addons.hpp  sokoenginepyext.cpp
lib/libsokoengine/lib/: .gitignore
lib/libsokoengine/playground/: CMakeLists.txt
lib/libsokoengine/res/: Doxyfile.in  SOK_format_specification.h  sok_format_spec_to_c.py
lib/libsokoengine/src/: CMakeLists.txt  common_types.hpp  sokoengine.hpp  sokoengine_config.hpp
lib/libsokoengine/src/board/: CMakeLists.txt  board_cell.cpp  board_cell.hpp  board_graph.cpp  board_graph.hpp  board_state.cpp  board_state.hpp  hashed_board_state.cpp  hashed_board_state.hpp  hexoban_board.cpp  hexoban_board.hpp  octoban_board.cpp  octoban_board.hpp  sokoban_board.cpp  sokoban_board.hpp  sokoban_plus.cpp  sokoban_plus.hpp  text_utils.cpp  text_utils.hpp  trioban_board.cpp  trioban_board.hpp  variant_board.cpp  variant_board.hpp
lib/libsokoengine/src/game/: CMakeLists.txt  mover.cpp  mover.hpp
lib/libsokoengine/src/snapshot/: CMakeLists.txt  atomic_move.cpp  atomic_move.hpp
src/libsokoengine/: .clang-format  .gitignore  CMakeLists.txt  INSTALL.md  README.md  atomic_move.cpp  atomic_move.hpp  benchmarks.cpp  benchmarks.hpp  board_graph.cpp  common_types.hpp  config.hpp  exceptions.cpp  exceptions.hpp  hexoban_tessellation.cpp  libsokoengine.hpp  octoban_tessellation.cpp  skindump.cpp  sokoban_tessellation.cpp  sokoengine.hpp  sokoengine_config.hpp  tessellation_base.cpp  tessellation_base.hpp  trioban_tessellation.cpp
src/libsokoengine/board/: hexoban_board.cpp  hexoban_board.hpp  sokoban_board.cpp  sokoban_board.hpp  trioban_board.cpp  trioban_board.hpp  variant_board.hpp
src/libsokoengine/cmake/: cmake_uninstall.cmake.in  configure.cmake  sokoengine-config.cmake.in
src/libsokoengine/common/: cell_orientation.hpp  characters.cpp  characters.hpp  direction.cpp  direction.hpp  game_config.hpp  hexoban_tessellation.cpp  hexoban_tessellation.hpp  numeric_types.hpp  octoban_tessellation.cpp  octoban_tessellation.hpp  sokoban_tessellation.cpp  sokoban_tessellation.hpp  tessellation.hpp  tessellation_impl.cpp  tessellation_impl.hpp  tile_shape.hpp  trioban_tessellation.cpp  trioban_tessellation.hpp
src/libsokoengine/docs/: CMakeLists.txt  Doxyfile.in
src/libsokoengine/game/: atomic_move.cpp  atomic_move.hpp  board_cell.cpp  board_cell.hpp  board_graph.cpp  board_graph.hpp  board_manager.cpp  board_manager.hpp  board_state.cpp  board_state.hpp  direction.cpp  direction.hpp  hashed_board_manager.cpp  hashed_board_manager.hpp  hexoban_board.cpp  hexoban_board.hpp  hexoban_tessellation.cpp  hexoban_tessellation.hpp  mover.cpp  mover.hpp  octoban_board.cpp  octoban_board.hpp  octoban_tessellation.cpp  octoban_tessellation.hpp  pusher_step.cpp  pusher_step.hpp  sokoban_board.cpp  sokoban_board.hpp  sokoban_plus.cpp  sokoban_plus.hpp  sokoban_tessellation.cpp  sokoban_tessellation.hpp  tessellation.cpp  tessellation.hpp  trioban_board.cpp  trioban_board.hpp  trioban_tessellation.cpp  trioban_tessellation.hpp  variant_board.cpp  variant_board.hpp
src/libsokoengine/graph/: board_graph.cpp  board_graph.hpp
src/libsokoengine/io/: collection.cpp  collection.hpp  hexoban.cpp  hexoban.hpp  hexoban_io.cpp  hexoban_io.hpp  hexoban_puzzle.cpp  hexoban_puzzle.hpp  octoban.cpp  octoban.hpp  octoban_io.cpp  octoban_io.hpp  octoban_puzzle.cpp  octoban_puzzle.hpp  puzzle.cpp  puzzle.hpp  puzzle_parsing.cpp  puzzle_parsing.hpp  puzzle_types.hpp  rle.cpp  rle.hpp  snapshot.cpp  snapshot.hpp  sok_file_format.cpp  sok_file_format.hpp  sokoban.cpp  sokoban.hpp  sokoban_io.cpp  sokoban_io.hpp  sokoban_puzzle.cpp  sokoban_puzzle.hpp  trioban.cpp  trioban.hpp  trioban_io.cpp  trioban_io.hpp  trioban_puzzle.cpp  trioban_puzzle.hpp  utilities.cpp  utilities.hpp
src/libsokoengine/manager/: board_manager.cpp  board_state.cpp  sokoban_plus.cpp  sokoban_plus.hpp
src/libsokoengine/skins/: common_skins_format.cpp  common_skins_format.hpp  geometry.cpp  geometry.hpp  hexoban_common_skins_format.cpp  hexoban_common_skins_format.hpp  image.cpp  image.hpp  image_impl.cpp  image_impl.hpp  octoban_common_skins_format.cpp  octoban_common_skins_format.hpp  skin.cpp  skin.hpp  sokoban_common_skins_format.cpp  sokoban_common_skins_format.hpp  trioban_common_skins_format.cpp  trioban_common_skins_format.hpp
src/libsokoengine/snapshot/: atomic_move.cpp  atomic_move.hpp
src/libsokoengine/src/: CMakeLists.txt
src/libsokoengine/tessellation/: direction.cpp  direction.hpp  hexoban_tessellation.cpp  hexoban_tessellation.hpp  octoban_tessellation.cpp  sokoban_tessellation.cpp  sokoban_tessellation.hpp  tessellation.cpp  tessellation.hpp  trioban_tessellation.cpp  trioban_tessellation.hpp
src/libsokoengine/utilities/: benchmarks.cpp  benchmarks.hpp  text_utils.hpp
src/sokoenginepyext/: CMakeLists.txt  export_atomic_move.cpp  export_board_cell.cpp  export_board_graph.cpp  export_board_manager.cpp  export_boards.cpp  export_direction.cpp  export_io_collection.cpp  export_io_puzzle.cpp  export_io_rle.cpp  export_io_snapshot.cpp  export_mover.cpp  export_pusher_step.cpp  export_sokoban_plus.cpp  export_tessellations.cpp  playground.cpp  sokoenginepyext.cpp  sokoenginepyext.hpp
src/utilities/: CMakeLists.txt  playground.cpp
(+1053 files in other folders)
