[metadata]
name = sokoenginepy
version = 0.5.4
description = Sokoban and variants game utilities
long_description = file: README.md
long_description_content_type = text/markdown
author = Tomislav Adamic
author_email = tomislav.adamic@gmail.com
url = https://github.com/tadams42/sokoenginepy
license = GPLv3
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: Python
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Programming Language :: Python :: 3 :: Only
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Games/Entertainment :: Puzzle Games
keywords =
    game
    sokoban
    hexoban
    octoban
    trioban
platforms = any

[options]
zip_safe = False
include_package_data = True
python_requires = >= 3.9
install_requires =
    arrow
    networkx > 2.5
    lark >= 1.1.2
package_dir=
    =src
packages=find:

[options.packages.find]
exclude=tests
where=src

[options.extras_require]
dev =
    black
    bump2version
    ipython
    isort
    pytest-spec
    pytest-mock
    twine
    check-manifest
    coverage
    factory-boy
    faker
    pytest >= 3.0.0
    m2r2
    sphinx >= 1.4
    sphinx_rtd_theme

tests=
    check-manifest
    coverage
    factory-boy
    faker
    pytest >= 3.0.0
    pytest-spec
    pytest-mock

docs =
    m2r2
    sphinx >= 1.4
    sphinx_rtd_theme
